# video_pipe_c

./: .gitignore  CMakeLists.txt  README.md
dockerfiles/: Dockerfile-x64-dev
face_models/face_detect/: config.pbtxt
face_models/face_recog/: config.pbtxt
models/face_models/face_detect/1/: model.onnx
models/face_models/face_recog/: config.pbtxt
models/yolo_models/yolov5_onnx/: config.pbtxt
models/yolo_models/yolov5_rknn/: config.pbtxt
nodes/: vp_file_src_node.cpp  vp_infer_node.cpp  vp_infer_node.h  vp_primary_infer_node.cpp  vp_primary_infer_node.h  vp_secondary_infer_node.cpp  vp_secondary_infer_node.h
nodes/broker/: vp_embeddings_properties_socket_broker_node.h
nodes/infers/: vp_classifier_node.cpp  vp_classifier_node.h  vp_enet_seg_node.cpp  vp_enet_seg_node.h  vp_lane_detector_node.cpp  vp_lane_detector_node.h  vp_mask_rcnn_detector_node.cpp  vp_mask_rcnn_detector_node.h  vp_openpose_detector_node.cpp  vp_openpose_detector_node.h  vp_ppocr_text_detector_node.cpp  vp_sface_feature_encoder_node.cpp  vp_sface_feature_encoder_node.h  vp_trt_vehicle_color_classifier.cpp  vp_trt_vehicle_feature_encoder.cpp  vp_trt_vehicle_plate_detector.cpp  vp_trt_vehicle_type_classifier.cpp  vp_yolo_detector_node.cpp  vp_yolo_detector_node.h  vp_yolo_tritonserver_node.cpp  vp_yolo_tritonserver_node.h  vp_yunet_face_detector_node.cpp  vp_yunet_face_detector_node.h
nodes/osd/: vp_face_osd_node.cpp
sample/: 1-1-1_tritonserver_sample.cpp  VP.h  triton_infer_sample.cpp  triton_infer_video_sample.cpp
samples/: 1-1-1_tritonserver_sample.cpp  1-1-1_yolo_tritonserver_sample.cpp  CMakeLists.txt  ba_crossline_sample.cpp  firesmoke_detect_sample.cpp  image_src_sample.cpp  mask_rcnn_sample.cpp  multi_detectors_and_classifiers_sample.cpp  multi_detectors_sample.cpp  obstacle_detect_sample.cpp  openpose_sample.cpp  rtsp_des_sample.cpp  skip_sample.cpp  triton_infer_sample.cpp  triton_infer_video_sample.cpp
triton_models/test/: config.pbtxt
utils/: vp_tritonserver.cpp  vp_tritonserver.h
vp_data/models/face_models/face_recog/: config.pbtxt
